
Changelog
=========

0.8.0b2
-------

This release introduces the following backwards-incompatible changes:

* A test project was added to make running the tests a little easier. The old
  way of running the tests has been removed.
0.8.0b1
-------

This is a bugfix and feature release. The internal API has changed to no
longer depend on session keys for username generation. This should be
backwards-compatible as long as you are using the documented API.

The following bugs have been fixed:

* PEP8 cleanups
* Tweak setup.py to make sure templates are installed (thanks Kurt Grandis)

The following features have been added:

* Removed the hard dependency on session keys to generate usernames, as it was
  unnecessary.
* remove_expired_users should no longer depend on using the database session
  backend - it will instead use SESSION_COOKIE_AGE to find lazy users
  who have not logged in recently and whose sessions will therefore have
  expired.

You should still not use remove_expired_users without reviewing the code;
in particular, you may wish to subclass the command and override
`to_delete()`.

These changes are somewhat experimental, so this is a beta release - it is
*not* recommended that you run this in production. Testing and feedback is
welcome.

0.7.0
-----

This is a feature release. Custom user classes are now supported via the
``LAZYSIGNUP_USER_MODEL`` setting. This is a backwards-compatible change.

Thanks to Luke Zapart for the idea and initial implementation.

0.6.2
-----

This is a bugfix release. Issues fixed:

* The LazySignupBackend no longer relies on a specific User class to
  authenticate a user. It now uses the fact that there is a relationship
  between the LazyUser and the main site User class. This fixes the bug
  where authenticate() was looking directly for UNUSABLE_PASSWORD, and also
  paves the way for custom user classes.

0.6.1
-----

This is a bugfix release. Issues fixed:
