@@ -32,8 +32,6 @@ LAZYSIGNUP_USER_AGENT_BLACKLIST = [
     "^search",
 ]
 
-# This merely needs to be present - as long as your test case specifies a
-# urls attribute, it does not need to be populated.
-ROOT_URLCONF = ''
+ROOT_URLCONF = 'testproject.urls'
 
 LAZYSIGNUP_USER_MODEL = 'lazysignup.CustomUser'
